fix: remove scrollbar box shadow

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -19,9 +19,7 @@ body {
 	&::-webkit-scrollbar {
 		width: 12px;
 	}
-	&::-webkit-scrollbar-track {
-		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	}
+
 	&::-webkit-scrollbar-thumb {
 		background-color: $comet;
 		outline: 1px solid $darkerMystic;
